ENG-21901 support for Java v 17.0 (#972)
* support for Java v 17.0