@@ -71,6 +71,12 @@ function init() {
     sqlcmd < ddl.sql
 }
 
+version=$(java -version 2>&1 | awk -F '"' '/version/ {print $2}')
+add_open=
+if [[ $version == 11.0* ]] || [[ $version == 17.0* ]] ; then
+	add_open="--add-opens java.base/sun.nio.ch=ALL-UNNAMED"
+fi
+
 # run the client that drives the example
 function client() {
     async-benchmark
@@ -94,7 +100,8 @@ function async-benchmark-help() {
 # ratelimit: must be a reasonable value if lantencyreport is ON
 function async-benchmark() {
     jars-ifneeded
-    java -classpath voter-client.jar:$CLIENTCLASSPATH voter.AsyncBenchmark \
+    java $add_open \
+	-classpath voter-client.jar:$CLIENTCLASSPATH voter.AsyncBenchmark \
         --displayinterval=5 \
         --warmup=5 \
         --duration=120 \
@@ -112,7 +119,8 @@ function sync-benchmark-help() {
 
 function sync-benchmark() {
     jars-ifneeded
-    java -classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
+    java $add_opens \
+	-classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
         voter.SyncBenchmark \
         --displayinterval=5 \
         --warmup=5 \
@@ -132,7 +140,8 @@ function jdbc-benchmark-help() {
 
 function jdbc-benchmark() {
     jars-ifneeded
-    java -classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
+    java $add_open \
+	-classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
         voter.JDBCBenchmark \
         --displayinterval=5 \
         --duration=120 \
